# GAMPII-GOOD

./: CMakeLists.txt  CMakeLists_Linux.txt  CMakeLists_Win.txt  README.md  flake.nix
.github/workflows/: nix.yml
dataset_Linux/: GOOD_cfg.yaml  crx_downloaded_fromGA.sh  run_GOOD  run_GOOD.py  run_GOOD_V3.1  rxo_downloaded_fromGA.sh  site_ga.list  site_mgex.list  site_pbo.list
dataset_Win/: GOOD_cfg.yaml  site_hk.list  site_ngs.list  site_trp.list
doc/: Configure and build YAML lib for Visual Studio under Windows_cn.docx  Configure and build YAML lib for Visual Studio under Windows_en.docx
src/: run_GOOD.cpp
src/common/: common.h  cstring.h  gtime.h  logger.h  types.h
src/core/: CMakeLists.txt  config.cpp  config.h  ftps.cpp  ftps.h
src/win/: unistd.h
